Code review changes * Keep the default style for select-react-plus, remove overriding ones * Add automated changes for `yarn.lock` * Fix the broken image path in `language_picker.jsx` * Remove the overflow:hidden from nav.top-nav in `_nav.styl` ** This helps in not hiding the dropdown menu

--- a/app/assets/stylesheets/modules/_language_picker.styl
+++ b/app/assets/stylesheets/modules/_language_picker.styl
@@ -1,47 +1,19 @@
 .language-picker	
+  margin-top -5px
+  margin-bottom -5px
 
   .Select
   	width 100px	
-  	border none
-
-  .Select.is-open
-    z-index 1 !important
 
   img
   	width 22px
 
-  .Select-control
-  	background none
-  	border none
-  	padding 0px
-  	padding-top 5px
-
-  .Select-control:hover
-  	box-shadow none
-
-  .is-focused:not(.is-open) > .Select-control
-  	box-shadow none
-
-  .Select-placeholder
-  	position absolute
-  	top -5px
-
-  .Select-menu 
-    position fixed !important
-    width 150px !important
-    border 1px solid #cccccc
-    background-color #e6e6e6
-    margin-right 5px
-
   .Select-menu-outer
-    margin-top 10px
-    border none
-    box-shadow none
+    width 200px 
+    right 0px
 
   .Select-option 
     &:first-child
       padding 10px 0px 10px 10px
       border-bottom 1px solid #cccccc
 
-  .Select-arrow-zone
-  	display none
